bootcamps/advancedk8s/module-2/gke-central/gke-central-lb.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "myapp-gke-central-lb"
  namespace: "default"
spec:
  ports:
  - name: "http"
    port: 80
    protocol: "TCP"
    targetPort: 80
  selector:
    load-balancer-myapp-gke-central-lb: "true"
  sessionAffinity: "None"
  type: "NodePort"
