bootcamps/advancedk8s/module-2/gke-central/gke-central-ingress.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  annotations:
    kubernetes.io/ingress.class: "istio"
  name: "myapp-gke-central-ingress"
  namespace: "default"
spec:
  backend:
    serviceName: "myapp-gke-central-lb"
    servicePort: 80
